Added signatures of all initial methods. Added first version of module based main function

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 preparacao/implementations/consensus/target
 preparacao/implementations/multipaxos_vs_raft/target
+ocaml/blockchain/*.cmi
+ocaml/blockchain/*.cmo
+ocaml/blockchain/*.exe
